update retrieve api
